--- a/web_gunung/index.html
+++ b/web_gunung/index.html
@@ -134,8 +134,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Jenis Gunung</h2>
-            <h3 class="section-subheading text-muted">Gunung yang ada di Indonesia.</h3>
+            <h2 class="section-heading text-uppercase">Gunung</h2>
+            <h3 class="section-subheading text-muted">Referensi gunung yang ada di Indonesia.</h3>
           </div>
         </div>
         <div class="row">
