--- a/web_gunung/index.html
+++ b/web_gunung/index.html
@@ -320,7 +320,7 @@
         <div class="row">
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
+              <img class="mx-auto rounded-circle" src="img/niko1.jpg" alt="">
               <h4>Niko Safir Abraham</h4>
               <p class="text-muted">Lead UI/UX</p>
               <ul class="list-inline social-buttons">
@@ -344,7 +344,7 @@
           </div>
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
+              <img class="mx-auto rounded-circle" src="img/tyas1.jpg" alt="">
               <h4>Tyas Ismi Zahrani</h4>
               <p class="text-muted">Lead Designer</p>
               <ul class="list-inline social-buttons">
@@ -368,7 +368,7 @@
           </div>
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
+              <img class="mx-auto rounded-circle" src="img/panca1.jpg" alt="">
               <h4>Panca Aditya Kusuma .W</h4>
               <p class="text-muted">Lead Developer</p>
               <ul class="list-inline social-buttons">
