--- a/web_gunung/index.html
+++ b/web_gunung/index.html
@@ -245,11 +245,11 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>2009-2011</h4>
-                    <h4 class="subheading">Our Humble Beginnings</h4>
+                    <h4>Langkah 1</h4>
+                    <h4 class="subheading">Membuka Web</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                    <p class="text-muted">Pendaftar membuka web (belum dihosting wkwkw). Pilih menu Registrasi, lengkapi form biodata.</p>
                   </div>
                 </div>
               </li>
@@ -259,11 +259,11 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>March 2011</h4>
-                    <h4 class="subheading">An Agency is Born</h4>
+                    <h4>Langkah 2</h4>
+                    <h4 class="subheading">Cek Email</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                    <p class="text-muted">Cek email yang digunakan unutk melakukan pendaftaran, melihat jumlah tarif total pembayaran dan rekening pembayaran.</p>
                   </div>
                 </div>
               </li>
@@ -273,11 +273,11 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>December 2012</h4>
-                    <h4 class="subheading">Transition to Full Service</h4>
+                    <h4>Langkah 3</h4>
+                    <h4 class="subheading">Transfer BANK</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                    <p class="text-muted">Melakukan pembayaran ke bank terdekat dengan cara setor tunai antar bank, karena untuk memudahkan dalam hal pengecekan.</p>
                   </div>
                 </div>
               </li>
@@ -287,19 +287,49 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>July 2014</h4>
-                    <h4 class="subheading">Phase Two Expansion</h4>
+                    <h4>Langkah 4</h4>
+                    <h4 class="subheading">Cek Email</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                    <p class="text-muted">Cek email untuk mengisi form konfirmasi pembayaran. Cek email untuk menerima konfirmasi dari admin.</p>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="timeline-image">
+                  <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4>Langkah 5</h4>
+                    <h4 class="subheading">Cetak Bukti pembayaran</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p class="text-muted">Cek email dan cetak bukti pebayaran, kelengkapan dan surat pernyataan.</p>
                   </div>
                 </div>
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <h4>Be Part
-                    <br>Of Our
-                    <br>Story!</h4>
+                  <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4>Langkah 6</h4>
+                    <h4 class="subheading">Cek Kelengkapan</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p class="text-muted">Cek Kelengkapan di pintu masuk pendakian, calon pendaki menunjukkan bukti cetak pembayaran ke petugas.</p>
+                  </div>
+                </div>
+              </li>
+              <li class="timeline-inverted">
+                <div class="timeline-image">
+                  <a href="#about" style="color: black;"><h4>Booking
+                    <br>Gunung
+                      <br>Disini!
+                    </h4>
+                    </a>
                 </div>
               </li>
             </ul>
