--- a/web_gunung/index.html
+++ b/web_gunung/index.html
@@ -178,7 +178,7 @@
             </a>
             <div class="portfolio-caption">
               <h4>Gunung Panderman</h4>
-              <p class="text-muted">Gn Panderman, Dusun Toyomerto, Desa Pesanggrahan, Kecamatan Batu, Kota Batu Kota Batu, Jawa Timur</p>
+              <p class="text-muted">Gn Panderman,Toyomerto, Pesanggrahan, Kota Batu, Jawa Timur</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -192,7 +192,7 @@
             </a>
             <div class="portfolio-caption">
               <h4>Gunung Penanggungan</h4>
-              <p class="text-muted">Gn. Penanggungan, Hutan, Trawas, Mojokerto, Jawa Timur</p>
+              <p class="text-muted">Gn. Penanggungan, Trawas, Mojokerto, Jawa Timur</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
