--- a/web_gunung/index.html
+++ b/web_gunung/index.html
@@ -463,7 +463,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">hubungi kami</h2>
-            <h3 class="section-subheading text-muted">Hubungi kami atau kritik dan saran jika anda mendapatkan masalah seputar pelayanan.</h3>
+            <h3 class="section-subheading text-muted" style="color: #fff;">Hubungi kami atau kritik dan saran jika anda mendapatkan masalah seputar pelayanan.</h3>
           </div>
         </div>
         <div class="row">
