--- a/web_gunung/index.html
+++ b/web_gunung/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Dashboard</title>
+    <title>Booking Pendakian Online</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -178,7 +178,7 @@
             </a>
             <div class="portfolio-caption">
               <h4>Gunung Panderman</h4>
-              <p class="text-muted">Gn Panderman,Toyomerto, Pesanggrahan, Kota Batu, Jawa Timur</p>
+              <p class="text-muted">Gn Panderman, Dusun Toyomerto, Desa Pesanggrahan, Kecamatan Batu, Kota Batu Kota Batu, Jawa Timur</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -192,7 +192,7 @@
             </a>
             <div class="portfolio-caption">
               <h4>Gunung Penanggungan</h4>
-              <p class="text-muted">Gn. Penanggungan, Trawas, Mojokerto, Jawa Timur</p>
+              <p class="text-muted">Gn. Penanggungan, Hutan, Trawas, Mojokerto, Jawa Timur</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -325,7 +325,7 @@
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <a href="#about" style="color: black;"><h4>Booking
+                  <a href="registrasi.html" style="color: black;"><h4>Booking
                     <br>Gunung!
                       <br>Disini!
                     </h4>
