--- a/web_gunung/registrasi.html
+++ b/web_gunung/registrasi.html
@@ -79,21 +79,21 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="form-group">
-                    <input class="form-control" id="name" type="text" placeholder="Nama Anda *" required data-validation-required-message="Please enter your name.">
+                    <input class="form-control" id="name" type="text" placeholder="Nama Anda *" required data-validation-required-message="Masukkan Nama Anda">
                     <p class="help-block text-danger"></p>
                   </div>
                   <div class="form-group">
-                    <input class="form-control" id="email" type="email" placeholder="Alamat Email Anda *" required data-validation-required-message="Please enter your email address.">
+                    <input class="form-control" id="email" type="email" placeholder="Alamat Email Anda *" required data-validation-required-message="Masukkan Email Anda">
                     <p class="help-block text-danger"></p>
                   </div>
                   <div class="form-group">
-                    <input class="form-control" id="phone" type="tel" placeholder="Nomor Telepon Anda *" required data-validation-required-message="Please enter your phone number.">
+                    <input class="form-control" id="phone" type="tel" placeholder="Nomor Telepon Anda *" required data-validation-required-message="Masukkan Nomor Telepon Anda">
                     <p class="help-block text-danger"></p>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
-                    <textarea class="form-control" id="message" placeholder="Pesan Anda *" required data-validation-required-message="Please enter a message."></textarea>
+                    <textarea class="form-control" id="message" placeholder="Pesan Anda *" required data-validation-required-message="Please enter a message.">Masukkan Pesan Anda</textarea>
                     <p class="help-block text-danger"></p>
                   </div>
                 </div>
