--- a/web_gunung/index.html
+++ b/web_gunung/index.html
@@ -29,6 +29,7 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+        <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/logoyellow.png" width="150px"></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
@@ -46,13 +47,7 @@
               <a class="nav-link js-scroll-trigger" href="#about">Registrasi</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#">Jalur Pendakian</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#">Persiapan</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#">Pemandu Wisata</a>
+              <a class="nav-link js-scroll-trigger" href="#">Persyaratan</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#team">Team</a>
@@ -61,6 +56,7 @@
               <a class="nav-link js-scroll-trigger" href="#contact">Hubungi</a>
             </li>
           </ul>
+        </div>
         </div>
     </nav>
 
