--- a/web_gunung/index.html
+++ b/web_gunung/index.html
@@ -557,12 +557,12 @@
                   <h2 class="text-uppercase">GUNUNG BROMO</h2>
                   <p class="item-intro text-muted">Gn. Bromo, Podokoyo, Tosari, Pasuruan, Jawa Timur</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
+                    <li>Ketinggian: 2,329 mdpl</li>
                     <li>Client: Threads</li>
-                    <li>Category: Illustration</li>
+                    <li>Koordinat: 7°56′30″LU,112°57′0″BT</li>
                   </ul>
+                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Project</button>
@@ -591,12 +591,12 @@
                   <h2 class="text-uppercase">GUNUNG KAWI</h2>
                   <p class="item-intro text-muted">Gn. Kawi, Ngadirenggo/Htn, Wlingi, Blitar, Jawa Timur</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
+                    <li>Ketinggian: 2,551 mdpl</li>
                     <li>Client: Explore</li>
-                    <li>Category: Graphic Design</li>
+                    <li>Koordinat: 7.9550° S,112.4650° E</li>
                   </ul>
+                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Project</button>
