--- a/web_gunung/index.html
+++ b/web_gunung/index.html
@@ -559,7 +559,7 @@
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
                   <ul class="list-inline">
                     <li>Ketinggian: 2.329 mdpl</li>
-                    <li>Client: Threads</li>
+                    <li>Status: Aktif</li>
                     <li>Koordinat: 7°56′30″LU,112°57′0″BT</li>
                   </ul>
                   <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
@@ -590,13 +590,19 @@
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">GUNUNG KAWI</h2>
                   <p class="item-intro text-muted">Gn. Kawi, Ngadirenggo/Htn, Wlingi, Blitar, Jawa Timur</p>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt="">
                   <ul class="list-inline">
                     <li>Ketinggian: 2.551 mdpl</li>
-                    <li>Client: Explore</li>
+                    <li>Status: Explore</li>
                     <li>Koordinat: 7.9550° S,112.4650° E</li>
                   </ul>
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <p>Gunung Bromo (dari bahasa Sanskerta: Brahma, salah seorang Dewa Utama dalam agama Hindu) atau dalam bahasa Tengger dieja "Brama", adalah sebuah gunung berapi aktif di Jawa Timur, Indonesia. Gunung ini memiliki ketinggian 2.329 meter di atas permukaan laut dan berada dalam empat wilayah kabupaten, yakni Kabupaten Probolinggo, Kabupaten Pasuruan, Kabupaten Lumajang, dan Kabupaten Malang. Gunung Bromo terkenal sebagai objek wisata utama di Jawa Timur. Sebagai sebuah objek wisata, Bromo menjadi menarik karena statusnya sebagai gunung berapi yang masih aktif. Gunung Bromo termasuk dalam kawasan Taman Nasional Bromo Tengger Semeru.
+                     Bentuk tubuh Gunung Bromo bertautan antara lembah dan ngarai dengan kaldera atau lautan pasir seluas sekitar 10 kilometer persegi.
+                     Gunung Bromo mempunyai sebuah kawah dengan garis tengah ± 800 meter (utara-selatan) dan ± 600 meter (timur-barat). Sedangkan daerah bahayanya berupa lingkaran dengan jari-jari 4 km dari pusat kawah Bromo. </p>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt="">
+                  <p>Dari Surabaya kita bisa naik bis menuju Probolinggo dan turun di Pasuruan. Selanjutnya naik colt/angkutan umum menuju Desa Tosari – Wonokitri. Di Wonokitri kita dapat bermalam di hotel/losmen. Selanjutnya jarak menuju wisata Bromo sudah dekat.
+                     Dari arah Probolinggo kita naik colt atau bis menuju Sukapura, kemudian kita terus ke Ngadisari. Dari Ngadisari naik kuda atau berjalan kaki menuju Cemoro lawang sejauh 3 km. Di Cemoro lawang kita dapat bermalam di hotel/losmen. Selanjutnya jarak menuju wisata Bromo sudah dekat.
+                     Dari Malang kita naik minibus menuju ke Tumpang (18 Km). Dari Tumpang perjalanan kita lanjutkan dengan naik Jeep menuju ke Jemplang sekitar 1,5 jam perjalanan melewati Desa Gubuk Klakah dan Desa Ngadas. Sampai di Jemplang selanjutnya jarak menuju Bromo sudah dekat.
+                     Dari Purwodadi, dari Kota Malang kita naik Bus atau minibus menuju ke Purwodadi. Dari Purwodadi kita naik minibus menuju ke Desa Tosari, melewati Desa Nonggojajar. Dari Tosari kita teruskan menuju Wonokitri. Di Wonokitri kita dapat bermalam di hotel/losmen. Selanjutnya jarak menuju wisata Bromo sudah dekat.</p>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Project</button>
