--- a/web_gunung/index.html
+++ b/web_gunung/index.html
@@ -184,11 +184,11 @@
                   <i class="fa fa-search fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/penanggungan.jpg" alt="">
+              <img class="img-fluid" src="img/lawu.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Gunung Penanggungan</h4>
-              <p class="text-muted">Gn. Penanggungan, Hutan, Trawas, Mojokerto, Jawa Timur</p>
+              <h4>Gunung Lawu</h4> 
+              <p class="text-muted">Gn. Lawu, Gondosuli, Tawangmangu, Kabupaten Karanganyar, Jawa Tengah</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -212,11 +212,11 @@
                   <i class="fa fa-search fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/Wilis.jpg" alt="">
+              <img class="img-fluid" src="img/merbabu.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Gunung Wilis</h4>
-              <p class="text-muted">Gunung Wilis, Banaran, Pulung, Kabupaten Ponorogo, Jawa Timur</p>
+              <h4>Gunung Merbabu</h4>
+              <p class="text-muted">Gn Merbabu, Suroteleng, Selo, Kabupaten Boyolali, Jawa Tengah</p>
             </div>
           </div>
         </div>
@@ -564,7 +564,7 @@
                   <p>Gunung Bromo (dari bahasa Sanskerta: Brahma, salah seorang Dewa Utama dalam agama Hindu) atau dalam bahasa Tengger dieja "Brama", adalah sebuah gunung berapi aktif di Jawa Timur, Indonesia. Gunung ini memiliki ketinggian 2.329 meter di atas permukaan laut dan berada dalam empat wilayah kabupaten, yakni Kabupaten Probolinggo, Kabupaten Pasuruan, Kabupaten Lumajang, dan Kabupaten Malang. Gunung Bromo terkenal sebagai objek wisata utama di Jawa Timur. Sebagai sebuah objek wisata, Bromo menjadi menarik karena statusnya sebagai gunung berapi yang masih aktif. Gunung Bromo termasuk dalam kawasan Taman Nasional Bromo Tengger Semeru.
                      Bentuk tubuh Gunung Bromo bertautan antara lembah dan ngarai dengan kaldera atau lautan pasir seluas sekitar 10 kilometer persegi.
                      Gunung Bromo mempunyai sebuah kawah dengan garis tengah ± 800 meter (utara-selatan) dan ± 600 meter (timur-barat). Sedangkan daerah bahayanya berupa lingkaran dengan jari-jari 4 km dari pusat kawah Bromo. </p>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/jalurbromo.jpg" alt="">
+                  <img class="img-fluid d-block mx-auto" src="img/jalurbromo.jpg" alt="">
                   <p>Dari Surabaya kita bisa naik bis menuju Probolinggo dan turun di Pasuruan. Selanjutnya naik colt/angkutan umum menuju Desa Tosari – Wonokitri. Di Wonokitri kita dapat bermalam di hotel/losmen. Selanjutnya jarak menuju wisata Bromo sudah dekat.
                      Dari arah Probolinggo kita naik colt atau bis menuju Sukapura, kemudian kita terus ke Ngadisari. Dari Ngadisari naik kuda atau berjalan kaki menuju Cemoro lawang sejauh 3 km. Di Cemoro lawang kita dapat bermalam di hotel/losmen. Selanjutnya jarak menuju wisata Bromo sudah dekat.
                      Dari Malang kita naik minibus menuju ke Tumpang (18 Km). Dari Tumpang perjalanan kita lanjutkan dengan naik Jeep menuju ke Jemplang sekitar 1,5 jam perjalanan melewati Desa Gubuk Klakah dan Desa Ngadas. Sampai di Jemplang selanjutnya jarak menuju Bromo sudah dekat.
@@ -601,14 +601,28 @@
                     <li>Status: Explore</li>
                     <li>Koordinat:  8°24′52S 116°27′35E </li>
                   </ul>
-                  <p>Gunung Bromo (dari bahasa Sanskerta: Brahma, salah seorang Dewa Utama dalam agama Hindu) atau dalam bahasa Tengger dieja "Brama", adalah sebuah gunung berapi aktif di Jawa Timur, Indonesia. Gunung ini memiliki ketinggian 2.329 meter di atas permukaan laut dan berada dalam empat wilayah kabupaten, yakni Kabupaten Probolinggo, Kabupaten Pasuruan, Kabupaten Lumajang, dan Kabupaten Malang. Gunung Bromo terkenal sebagai objek wisata utama di Jawa Timur. Sebagai sebuah objek wisata, Bromo menjadi menarik karena statusnya sebagai gunung berapi yang masih aktif. Gunung Bromo termasuk dalam kawasan Taman Nasional Bromo Tengger Semeru.
-                     Bentuk tubuh Gunung Bromo bertautan antara lembah dan ngarai dengan kaldera atau lautan pasir seluas sekitar 10 kilometer persegi.
-                     Gunung Bromo mempunyai sebuah kawah dengan garis tengah ± 800 meter (utara-selatan) dan ± 600 meter (timur-barat). Sedangkan daerah bahayanya berupa lingkaran dengan jari-jari 4 km dari pusat kawah Bromo. </p>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt="">
-                  <p>Dari Surabaya kita bisa naik bis menuju Probolinggo dan turun di Pasuruan. Selanjutnya naik colt/angkutan umum menuju Desa Tosari – Wonokitri. Di Wonokitri kita dapat bermalam di hotel/losmen. Selanjutnya jarak menuju wisata Bromo sudah dekat.
-                     Dari arah Probolinggo kita naik colt atau bis menuju Sukapura, kemudian kita terus ke Ngadisari. Dari Ngadisari naik kuda atau berjalan kaki menuju Cemoro lawang sejauh 3 km. Di Cemoro lawang kita dapat bermalam di hotel/losmen. Selanjutnya jarak menuju wisata Bromo sudah dekat.
-                     Dari Malang kita naik minibus menuju ke Tumpang (18 Km). Dari Tumpang perjalanan kita lanjutkan dengan naik Jeep menuju ke Jemplang sekitar 1,5 jam perjalanan melewati Desa Gubuk Klakah dan Desa Ngadas. Sampai di Jemplang selanjutnya jarak menuju Bromo sudah dekat.
-                     Dari Purwodadi, dari Kota Malang kita naik Bus atau minibus menuju ke Purwodadi. Dari Purwodadi kita naik minibus menuju ke Desa Tosari, melewati Desa Nonggojajar. Dari Tosari kita teruskan menuju Wonokitri. Di Wonokitri kita dapat bermalam di hotel/losmen. Selanjutnya jarak menuju wisata Bromo sudah dekat.</p>
+                  <p>Gunung Rinjani berlokasi di Pulau Lombok, Nusa Tenggara Barat. Gunung yang merupakan gunung berapi kedua tertinggi di Indonesia dengan ketinggian 3.726 m dpl serta terletak pada lintang 8º25' LS dan 116º28' BT ini merupakan gunung favorit bagi pendaki Indonesia karena keindahan pemandangannya. Gunung ini merupakan bagian dari Taman Nasional Gunung Rinjani yang memiliki luas sekitar 41.330 ha dan ini akan diusulkan penambahannya sehingga menjadi 76.000 ha ke arah barat dan timur.</p>
+                  <img class="img-fluid d-block mx-auto" src="img/jalurinjani.jpg" alt="">
+                  <p>Jalur Senaru adalah Jalur pendakian Senaru adalah jalur pendakian paling ramai. Jalur pendakian yang cukup mudah ini sering digunakan untuk wisata trekking, juga oleh masyarakat adat yang akan melakukan ritual adat dan keagamaan di puncak Rinjani atau Danau Segara Anak.
+                    Rute pendakian meliputi Senaru – Pelawangan Senaru – Danau Segara Anak. Semua ditempuh dengan berjalan kaki selama kurang lebih 10 hingga 12 jam melalui trail wisata yang berada di hutan primer. Selama menyusuri trail kamu bisa beristirahat karena di sepanjang trail sudah tersedia sarana peristirahatan pada setiap pos. Di sepanjang perjalanan, kamu bisa menikmati indahnya hutan belantara yang liar dan formasi bebatuan yang menakjubkan.
+                    Pemandangan di ujung track Senaru.
+                    Ringkasan jalur Senaru:
+                    Mataram – Senaru (3-4 Jam dengan mobil)
+                    Senaru – Danau Segara Anak (7-10 jam jalan kaki
+                    Danau Segara Anak – Pelawangan Sembalun (4 jam jalan kaki)
+                    Pelawangan Sembalun – Puncak Rinjani (2-3 jam jalan kaki)
+                  Jalur Sembalun
+                    Jalur Sembalun juga merupakan jalur trekking yang ramai oleh para pendaki. Rute yang dilalui adalah gerbang Sembalun Lawang – Pelawangan Sembalun – Puncak Rinjani memakan waktu 9 – 10 jam. Jalur ini begitu mengesankan dan menegangkan dengan padang savana dan punggung gunung berhiaskan jurang di kiri dan kanan jalur.
+                  Ringkasan jalur Sembalun:
+                    Mataram – Sembalun (4-5 jam mobil )
+                    Sembalun Lawang – Puncak Gunung Rinjani (7 jam jalan kaki)
+                    Sembalun Lawang – Danau Segara Anak (2-3 jam jalan kaki)
+                  alur Torean
+                    Jalur Torean termasuk jalur pendakian yang ekstrim dan tak cocok untuk pemula. Tapi seperti hukum alam yang berlaku, makin sulit sesuatu dilakukan, makin memuaskan hasil yang didapat. Jalur Torean memang memiliki berjuta pesona yang sulit ditandingi. Jika ingin menikmati pemandangan yang variatif, kamu bisa memilih dua jalur yang berbeda, misalnya naik melalui Sembalun dan turun melalui Torean (Sembalun-Torean). Dengan mendaki melalui Sembalun, kamu bisa lebih mudah menggapai puncak Rinjani. Lalu ketika turun melaui jalur Torean, kamu bisa menikmati keindahan alam yang berbeda.
+                 Ringkasan jalur pendakian Torean:
+                    Mataram – Torean (4-5 jam mobil)
+                    Torean – Danau Segara Anak (8-9 jam jalan kaki)
+                  </p>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Project</button>
@@ -636,7 +650,7 @@
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">GUNUNG PANDERMAN</h2>
                   <p class="item-intro text-muted">Gn Panderman, Dusun Toyomerto, Desa Pesanggrahan, Kecamatan Batu, Kota Batu, Jawa Timur</p>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/03-full.jpg" alt="">
+                  <img class="img-fluid d-block mx-auto" src="img/jalurpanderman.jpg" alt="">
                   <ul class="list-inline">
                     <li>Ketinggian: 2.045 mdpl</li>
                     <li>Client: Explore</li>
@@ -668,15 +682,42 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">GUNUNG PENANGGUNGAN</h2>
-                  <p class="item-intro text-muted">Gn. Penanggungan,Trawas, Mojokerto, Jawa Timur</p>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/04-full.jpg" alt="">
-                  <ul class="list-inline">
-                    <li>Ketinggian: 1.653 mdpl</li>
-                    <li>Client: Explore</li>
-                    <li>Koordinat: 7,615°LS 112,62°BT </li>
+                  <h2 class="text-uppercase">GUNUNG LAWU</h2>
+                  <p class="item-intro text-muted">Gn. Lawu, Gondosuli, Tawangmangu, Kabupaten Karanganyar, Jawa Tengah</p>
+                 <ul class="list-inline">
+                    <li>Ketinggian:3.265 mdpl</li>
+                    <li>Status: Tidak Aktif</li>
+                    <li>Koordinat: 111°11’39 LS 07°37’37 BT </li>
                   </ul>
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <p>Terletak di Pulau Jawa, Indonesia, tepatnya di perbatasan Provinsi Jawa Tengah dan Jawa Timur. Gunung Lawu terletak di antara tiga kabupaten yaitu Kabupaten Karanganyar, Jawa Tengah, Kabupaten Ngawi, dan Kabupaten Magetan, Jawa Timur. Status gunung ini adalah gunung api "istirahat" (diperkirakan terahkir meletus pada tanggal 28 November 1885[3][4]) dan telah lama tidak aktif, terlihat dari rapatnya vegetasi serta puncaknya yang tererosi. Di lerengnya terdapat kepundan kecil yang masih mengeluarkan uap air (fumarol) dan belerang (solfatara). Gunung Lawu mempunyai kawasan hutan Dipterokarp Bukit, hutan Dipterokarp Atas, hutan Montane, dan hutan Ericaceous. Gunung Lawu adalah sumber inspirasi dari nama kereta api Argo Lawu, kereta api eksekutif yang melayani Solo Balapan-Gambir.
+                   Gunung Lawu memiliki tiga puncak, Puncak Hargo Dalem, Hargo Dumiling dan Hargo Dumilah. Yang terakhir ini adalah puncak tertinggi.</p>
+                  <img class="img-fluid d-block mx-auto" src="img/jalurlawu.jpg" alt="">
+                  <p>Jalur Pendakian
+                    Pendakian melalui Cemoro Sewu, Wilayah Timur 
+                    Jarak yang harus ditempuh sejauh 9 km. Jalan berupa jalan setapak yang sudah diberi batu sehingga merupakan jalan permanen yang besar, jalan ini sampai mendekati pos IV. 
+                    Pos I, Pos II, Pos III, Pos IV, Sendang Drajat, Hargo Dalem, Puncak (Hargo Dumilah).
+                    Shelter di Pos II, Pos III, Haro Dalem, dan Puncak.
+                    Sumber air sangat sedikit, hanya terdapat di Sendang Drajat dan kalau hujan ada di Sumur Jalatunda
+                    Obyek yang menarik adalah padang rumput, padang edelweis, gugusan bukit.
+                    Juga terdapat tempat pertapaan (Hargo Dalem) yang selalu ramai dikunjungi para peziarah.Puncak Udara di puncak cukup dingin, angin kencang, cuaca cerah, terdiri tanah lapang.
+                    Pendakian melalui Cemoro Kandang, Jawa Tengah 
+                    Cemoro Kandang merupakan tempat pendakian G Lawu yang berada di perbatasan Jawa Tengah dan Jawa Timur, banyak terdapat warung makan sehingga kita dapat membeli perbekalan dan sekedar makan di sana. Apabila kita menginginkan tempat beristirahat kita dapat menggunakan posko pendakian  yang berupa pondok maupuun mengunakan tempat Pak Atmo yang berada 1 km sebelum Cemoro Kandang. Untuk perijinan apabila tidak berombongan lebih dari 20 orang hanya perlu meninggalkan kartu identitas serta membayar restribusi serta asuransi.
+                    Dari Cemoro Kandang mencapai Puncak dibutuhkan waktu kira-kira 7 jam menempuh kurang lebih 12 km. Medan yang ditempuh berupa pepohonan yang lumayan lebat, mendekati puncak vegetasi menjadi lebih jarang. Apabila sedang musim Oktober - Desember maka edelweis akan berbunga dan merupakan pemandangan yg indah.
+                    Rute perjalanan :
+                      Cemoro Kandang (1600 mdpl)  - Pos I (taman Sari Bawah - 2300 mdpl)
+                      Dapat ditempuh dalam waktu 1 jam, terdapat pondok pendakian yang terbuat dari batu, di depan pondok terdapat jalan setapak menuju ke sungai yang mengandung sulfur. Perjalanan relatif santai karena jalan masih belum terlalu menanjak.
+                      Pos I - Pos II (Taman Sari Atas - 2470 mdpl)
+                      Waktu tempuh sekitar 1 jam. Dulu di pos II ini terdapat pondok pendakian dari kayu tetapi sekarang sudah hilang ditelan waktu. Dari Pos II ada jalan setapak menuju ke Kawah Lawu, perjalanan menuju kawah dapat ditempuh kurang lebih 30 menit. Perjalanan ke pos II ini sudah mulai agak menanjak dengan pemandangan pohon-pohon bekas terbakar.
+                      Pos II - Pos III (Penggik - 2760 mdpl)
+                      Perjalanan lumayan jauh dari Pos II karena pada awal pos II jalanan mendatar dan setelah hampir mendekati pos III jalanan mendaki dan berkelok-kelok. Waktu tempuh 2,5 jam. Ada pos pendakian berupa gubug dari kayu dan seng. Agak ke atas sedikit terdapat mata air yang diberi nama Sendang Panguripan. Tetapi di sarankan membawa persediaan air dari bawah karena kalo pada musim kemarau air hanya sedikit dan keruh.
+                      Pos III - Pos IV (Cokro Suryo - 3025 mdpl)
+                      Perjalanan memakan waktu 1,5 jam, kondisi jalan mulai agak curam dengan mulai bergantinya vegetasi ke vegetasi yang lebih jarang. Cokro Suryo merupakan tanah lapang dengan pemandangan yang luas, angin sering kali bertiup dengan kencang, dulu posko pendakian di sini hancur dihantam badai.
+                      Pos IV - Pos V (3150 mdpl)
+                      Dapat kita tempuh dalam waktu 0,5 jam.
+                      Pos V - Argo Dalem (3170 mdpl)
+                      Diatas pos IV akan kita temui pesanggrahan yang bernama Argo Dalem, merupakan tempat untuk menyepikan diri bagi penganut Kejawen. Jalur dari Cemoro Sewu akan bertemu di sini untuk kemudian menjadi jalur menuju puncak.  
+                      Argo Dalem - Puncak (Argo Dumilah - 3265 mdpl)
+                      Perjalanan menuju ke puncak akan melewati jalan yang merupakan jalan air sehingga kalau hujan akan ada aliran air turun. Waktu tempuh kurang lebih 1 jam. Di puncak terdapat tugu peringatan dari batu dan ada pondok pendakian dari papan, tetapi diharapkan untuk membawa perlengkapan sendiri sebab pondok-pondok pendakian di G Lawu selalu terisi, jadi jangan terlalu mengandalkan posko.</p>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Project</button>
@@ -704,8 +745,7 @@
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">GUNUNG SEMERU</h2>
                   <p class="item-intro text-muted">Gn. Semeru, Pasrujambe, Kabupaten Lumajang, Jawa Timur</p>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/05-full.jpg" alt="">
-                  <ul class="list-inline">
+                   <ul class="list-inline">
                     <li>Ketinggian: 3.744 mdpl</li>
                     <li>Client: Explore</li>
                     <li>Koordinat: 8°06' LS 112°55' BT. </li>
@@ -741,10 +781,11 @@
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/06-full.jpg" alt="">
                   <ul class="list-inline">
                     <li>Ketinggian: 2.169 mdpl</li>
-                    <li>Client: Explore</li>
+                    <li>Status: Akrif</li>
                     <li>Koordinat: 7,808°LS 111,758°BT </li>
                   </ul>
                   <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <img class="img-fluid d-block mx-auto" src="img/jalursemeru.jpg" alt="">
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Project</button>
